--- a/DataPlaneUtils/pom.xml
+++ b/DataPlaneUtils/pom.xml
@@ -17,14 +17,35 @@
 	</dependencies>
 	<build>
   		<plugins>
-  		<plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.5.1</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-  		</plugin>
+  			<plugin>
+        		<artifactId>maven-compiler-plugin</artifactId>
+        		<version>3.5.1</version>
+        		<configuration>
+          			<source>1.8</source>
+          			<target>1.8</target>
+        		</configuration>
+  			</plugin>
+  			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+					<archive>
+						<manifest>
+							<mainClass>com.hortonworks.util.DataPlaneUtils</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
   		</plugins>
     	<sourceDirectory>src/</sourceDirectory>
     	<resources>
