--- a/SparkPhoenixETL/pom.xml
+++ b/SparkPhoenixETL/pom.xml
@@ -66,6 +66,24 @@
           <target/>
         </configuration>
       </plugin>
+     <plugin>
+                <groupId>org.scala-tools</groupId>
+                <artifactId>maven-scala-plugin</artifactId>
+                <version>2.15.2</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>compile</goal>
+                            <goal>testCompile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <sourceDirectory>src/main/scala</sourceDirectory>
+    				<testSourceDirectory>src/test/scala</testSourceDirectory>
+                </configuration>
+            </plugin>
     </plugins>
+    <outputDirectory>classes/</outputDirectory>
   </build>
 </project>
